# fletcher

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: fletcher.h
src/: CMakeLists.txt  fletcher.c  fletcher.h
test/: CMakeLists.txt  fletcher_test.c
